# Prediksi_IPM_JawaTimur

./: .gitignore  app.py  pyproject.toml  setup_database.sql
templates/: dashboard.html  detail_prediksi.html  retraining.html
