[project]
name = "program-ipm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "mysql-connector-python>=8.0.0",
    "werkzeug>=3.0.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.21.0",
]
